--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "helioslauncher",
+  "name": "world-rp",
   "version": "2.2.1",
-  "productName": "Helios Launcher",
+  "productName": "WorldRP",
   "description": "Modded Minecraft Launcher",
-  "author": "Daniel Scalzi (https://github.com/dscalzi/)",
+  "author": "Daniel Scalzi (https://github.com/dscalzi/) and Cattus",
   "license": "UNLICENSED",
-  "homepage": "https://github.com/dscalzi/HeliosLauncher",
+  "homepage": "https://github.com/zefarie/HeliosLauncher",
   "bugs": {
-    "url": "https://github.com/dscalzi/HeliosLauncher/issues"
+    "url": "https://github.com/zefarie/HeliosLauncher/issues"
   },
   "private": true,
   "main": "index.js",
@@ -46,6 +46,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dscalzi/HeliosLauncher.git"
+    "url": "git+https://github.com/zefarie/HeliosLauncher.git"
   }
 }
